--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
     <header>
         <nav>
-        <a href="http://facebook.com"> <img src="c:\Users\andre\Downloads\2021_Facebook_icon.svg.png"> </a>
+        <a href="http://facebook.com"> <img width="20px" src="c:\Users\andre\Downloads\2021_Facebook_icon.svg.png" alt="Logo Facebook"> </a>
+        <a href="http://x.com"><img width="20px" src="c:\Users\andre\Downloads\twitter.png" alt="Logo x"></a>
     </nav>
     </header>
     <h1></h1>
