--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
 <body>
     <header>
         <nav>
-        <a href="http://facebook.com"> <img width="20px" src="c:\Users\andre\Downloads\2021_Facebook_icon.svg.png" alt="Logo Facebook"> </a>
-        <a href="http://x.com"><img width="20px" src="c:\Users\andre\Downloads\twitter.png" alt="Logo x"></a>
-    </nav>
+        <a href="http://facebook.com"> <img width="20px" src="./imagenes/2021_Facebook_icon.svg.png" alt="Logo Facebook"></a>
+        
+        <a href="http://x.com"><img width="20px" src="./imagenes/twitter.png" alt="Logo x"></a>
+        </nav>
+        <nav>
+            <a href="http://codictados.com"><img width="200px/100px" src="./imagenes/logo263x781.png" alt="Cabecera.codictados"></a>
+        </nav>
     </header>
     <h1></h1>
 </body>
