add header list

--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
         <nav>
             <a href="http://codictados.com"><img width="200px/100px" src="./imagenes/logo263x781.png" alt="Cabecera.codictados"></a>
         </nav>
+        <ul>
+            <li><a href="http://codictados.com">Inicio</a></li>
+            <li><a href="http://codictados.com/servicios/">Servicios</a></li>
+            <li><a href="http://codictados.com/comunidad/">Comunidad</a></li>
+            <li><a href="https://codictados.com/registrarse/">Registrarse</a></li>
+        </ul>
     </header>
-    <h1></h1>
 </body>
 </html>
