--- a/index.html
+++ b/index.html
@@ -15,12 +15,20 @@
         <nav>
             <a href="http://codictados.com"><img width="200px/100px" src="./imagenes/logo263x781.png" alt="Cabecera.codictados"></a>
         </nav>
-        <ul>
-            <li><a href="http://codictados.com">Inicio</a></li>
-            <li><a href="http://codictados.com/servicios/">Servicios</a></li>
-            <li><a href="http://codictados.com/comunidad/">Comunidad</a></li>
-            <li><a href="https://codictados.com/registrarse/">Registrarse</a></li>
-        </ul>
+        <div>
+            <a href="http://codictados.com">Inicio</a>
+            <a href="http://codictados.com/servicios/">Servicios</a>
+            <a href="http://codictados.com/comunidad/">Comunidad</a>
+            <a href="https://codictados.com/registrarse/">Registrarse</a>
+        </div>
+        <main><h2>Blog</h2>
+        <div>
+            <a href="https://codictados.com/drawables-descentrados/"><img width="300px/600px" src="./imagenes/drawables.png" alt="drawables-descentrados"> 
+            <h3>drawables descentrados</h3>
+            <p>Drawables descentrados A veces, nos encontramos con drawables vectoriales que no conseguimos que salgan centrados en nuestro diseño por...</p></a>
+        </div>
+        </main>
+
     </header>
 </body>
 </html>
