--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
             <h3>drawables descentrados</h3>
             <p>Drawables descentrados A veces, nos encontramos con drawables vectoriales que no conseguimos que salgan centrados en nuestro diseño por...</p></a>
         </div>
+        <div>
+            <a href="https://codictados.com/scrollview-intercepta-eventos-de-googlemap/"><img width="300px/600px" src="./imagenes/mapas.png" alt="mapas-vs-scroll">
+            <h3>Mapas vs scrollview</h3>
+            <p>Evitar que un ScrollView intercepte los eventos de un GoogleMap Cuando tenemos un GoogleMap dentro de un ScrollView, al...</p>
+            </a>
+        </div>
         </main>
 
     </header>
