add aside entradas recientes

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <a href="http://codictados.com/comunidad/">Comunidad</a>
             <a href="https://codictados.com/registrarse/">Registrarse</a>
         </div>
+        </header>
         <main><h2>Blog</h2>
         <div>
             <a href="https://codictados.com/drawables-descentrados/"><img width="300px/600px" src="./imagenes/drawables.png" alt="drawables-descentrados"> 
@@ -33,8 +34,18 @@
             <p>Evitar que un ScrollView intercepte los eventos de un GoogleMap Cuando tenemos un GoogleMap dentro de un ScrollView, al...</p>
             </a>
         </div>
+        <aside>
+            <h3>Entradas recientes</h3>
+            <ul>
+                <li> <a href="https://codictados.com/drawables-descentrados/"> Drawables descentrados</a></li>
+                <li> <a href="https://codictados.com/scrollview-intercepta-eventos-de-googlemap/"> Evitar que un ScrollView intercepte los eventos de un GoogleMap</a></li>
+                <li> <a href="https://codictados.com/alerta-coder-5-propiedades-mutables-y-publicas/">Alerta Coder #5 – Propiedades mutables y públicas</a></li>
+                <li> <a href="https://codictados.com/alerta-coder-4-instanceof-is-y-nulos/">Alerta Coder #4 – instanceof, is y nulos</a></li>
+                <li> <a href="https://codictados.com/alerta-coder-3-lateinit-o-nulable/">Alerta Coder #3 – ¿Lateinit o nulable?</a></li>
+            </ul>
+        </aside>
         </main>
-
-    </header>
+<footer>©2024 Codictados Comunidad libre para el aprendizaje de codigo Online</footer>
+    
 </body>
 </html>
